Fix scrolling bug on mobile

--- a/restaurant/src/index.css
+++ b/restaurant/src/index.css
@@ -20,7 +20,7 @@
 }
 
 
-body {
+html, body {
   font-family: "Baloo Bhaijaan 2", sans-serif;
   overflow-x: hidden;
 
